Clicking on the CoffeeScript logo in the navbar should scroll to top; fix main column width on mobile

--- a/documentation/site/docs.css
+++ b/documentation/site/docs.css
@@ -151,6 +151,7 @@ button:focus, .navbar-dark .navbar-toggler:focus {
  */
 
 .main {
+  max-width: 100%;
   padding: 1.3em;
 }
 @media (min-width: 992px) {
